[package]
name = "mev-bot-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.7.11"
solana-sdk = "1.7.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
toml = "0.5"
rust_decimal = "1.14"
rust_decimal_macros = "1.14"